Updated dependencies / configuration to support Java 10.0.1
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>